# sqlfunctions

./: ChangeLog  Makefile.in  README  _pkg-functions.in  build.sh  build_expand.sh.in  config.vars  configure  configure.ac  crontab.daily.in  crontab.in  exec_sql.1  exec_sql.in  exec_sql.ru.1  logrotate.conf.in  logrotate.in  logrotate_main.conf.in  oradba-crontab.in  sql-functions.def  sql-functions.in  test_build.sh
debian/: changelog  conffiles  control  copyright  postinst  rules
redhat/: oradba-sqlfunctions.spec
